# wrapkit

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
apryse-server/: .env.example  Dockerfile  fly.toml  package.json  server.js
scripts/: release.sh
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/AppShell/: AppShell.module.css  AppShell.tsx
src/components/DocumentList/: DocumentList.module.css  DocumentList.tsx
src/components/DraggableField/: DraggableField.module.css  DraggableField.tsx
src/components/FillPromptModal/: FillPromptModal.module.css  FillPromptModal.tsx
src/components/MatchStatusModal/: MatchStatusModal.module.css  MatchStatusModal.tsx
src/components/MatchStatusPanel/: MatchStatusPanel.module.css  MatchStatusPanel.tsx
src/components/NewProjectView/: NewProjectView.module.css  NewProjectView.tsx
src/components/PdfDropzone/: PdfDropzone.module.css  PdfDropzone.tsx
src/components/Toast/: Toast.tsx  (+1 more)
src/data/: mockProjects.ts  mockTemplates.ts
src/services/: supabaseClient.ts  templateCache.ts  templateRegistry.ts
src/types/: index.ts
src/utils/: aiFieldDetector.ts  embeddings.ts  exportPdf.ts  fieldCatalog.ts  fieldDetector.ts  fill.ts  pdfProjectExtractor.ts  pdfWriter.ts  templateFingerprint.ts  trayManager.ts
supabase/: config.toml  verified_template_registry.sql
(+23 files in other folders)
