[package]
name = "wrapkit"
version = "0.1.0"
description = "Film production PDF autofill with shared template workflow"
authors = ["you"]
edition = "2021"

[lib]
name = "wrapkit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
